[package]
name = "todui"
version = "0.1.0"
authors = ["Arran Gabriel <arrankg@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
crossterm = "0.28.1"
once_cell = "1.20.3"
paste = "1.0.15"
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
xdg = "3.0.0"
